--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import src.utils as utils\n",
-    "\n",
-    "utils.readyaml('config.yaml')"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "explore\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
@@ -19,7 +23,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.13"
   },
   "orig_nbformat": 4,
