refactored dataset initialisation

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -46,7 +46,7 @@
     "#-----------------------------------\n",
     "\n",
     "CONFIG_FILE='config.yaml'\n",
-    "\n",
+    "DSETNAME='patch_camelyon'\n",
     "#-----------------------------------\n",
     "#INITIALISE\n",
     "#-----------------------------------\n",
@@ -57,52 +57,15 @@
     "odirname=config['odirname']\n",
     "batchlen=config['batchlen']\n",
     "\n",
-    "#if we're not training, hide GPU to avoid it going OOM when viewing layer outputs\n",
-    "#   sure there must be a way to do this more cleanly\n",
-    "if not config['DOTRAIN']:\n",
-    "    tf.config.set_visible_devices([], 'GPU')\n",
-    "\n",
-    "print(f'python version: {sys.version}')\n",
-    "print(f'tensorflow version: {tf.__version__}')\n",
-    "\n",
-    "gpu_available = (len(tf.config.list_physical_devices('GPU')) > 0)\n",
-    "print(f'GPU: {gpu_available}')\n",
-    "\n",
     "spath, wdir, odir, checkpoint_path, checkpoint_dir = utils.initialise(config)\n",
     "\n",
     "#-----------------------------------\n",
     "#MAIN START\n",
     "#-----------------------------------\n",
     "\n",
-    "print(\"---------------\")\n",
-    "data, info = tfds.load('patch_camelyon', with_info = True, as_supervised = True)\n",
+    "dtrain, dvalidation, dtest, dsinfo = utils.datainit(config, DSETNAME)\n",
     "\n",
-    "dtrain = data['train']\n",
-    "dvalidation = data['validation']\n",
-    "dtest = data['test']\n",
-    "\n",
-    "#normalise all to range(0,1) - speeds up ML calc\n",
-    "# tfds.map performs (function) on each element of the array\n",
-    "dtrain = dtrain.map(utils.normalise)\n",
-    "dvalidation = dvalidation.map(utils.normalise)\n",
-    "dtest = dtest.map(utils.normalise)\n",
-    "\n",
-    "#shuffle the training data to use a different set each time\n",
-    "dtrain=dtrain.shuffle(config['buffer'])\n",
-    "\n",
-    "#get a sub-batch for training\n",
-    "dtrain = dtrain.batch(batchlen) \n",
-    "dvalidation = dvalidation.batch(batchlen) \n",
-    "dtest = dtest.batch(batchlen) \n",
-    "\n",
-    "#extract tensor elements\n",
-    "#   iter converts to iterable object\n",
-    "#   next extracts element from each\n",
-    "#   comes as (image, label) tuple\n",
-    "\n",
-    "timg, tlabels = next(iter(dtrain))\n",
-    "vimg, vlabels = next(iter(dvalidation))\n",
-    "testimg, testlabels  = next(iter(dtest))\n",
+    "timg, tlabels, vimg, vlabels, testimg, testlabels = utils.tensorinit(dtrain, dvalidation, dtest)\n",
     "\n",
     "#check shapes for both\n",
     "#should correspond to batch size\n",
